--- a/scss/styles.css
+++ b/scss/styles.css
@@ -89,7 +89,7 @@ form .form-control {
   display: block;
   width: 100%;
   padding: 1rem;
-  border-radius: 5rem;
+  border-radius: 5px;
 }
 form .btn {
   width: 100%;
@@ -100,6 +100,10 @@ form .btn {
 }
 #mainheader .subnavig .subnav .form-inline {
   display: inline;
+}
+
+#contact .flexbox {
+  flex: 1;
 }
 
 #footer {
