--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -88,7 +88,7 @@ form {
         padding: 1rem;
         border-radius: 5px;
     }
-    .btn {
+    button {
         width: 100%;
     }
 }
@@ -104,7 +104,52 @@ form {
             }
         }
     }
+    .navbar {
+        .logo {
+            display: block;
+            width: 100px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        ul {
+            text-align: center;
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+        }
+        li {
+            display: inline;
+            text-align: center;
+            margin-left: 1rem;
+        }
+    }
 }
+
+//showcase
+#showcase {
+    width: 90%;
+    margin: 0 auto;
+    .showcase-flex {
+        img {
+            width: 50%;
+        }
+        a {
+            padding: 1rem 0;
+        }
+        .subtitle {
+            margin: 1rem 0;
+        }
+        h4 {
+            margin-bottom: 2rem;
+        }
+        .btn {
+            margin: 2rem 0;
+            width: 200px;
+        }
+
+    }
+}
+
+
 
 //contact
 #contact {
