--- a/scss/styles.css
+++ b/scss/styles.css
@@ -139,6 +139,36 @@ form button {
   width: 200px;
 }
 
+#showcase-2 {
+  padding-top: 3rem;
+  width: 90%;
+  margin: 0 auto;
+}
+#showcase-2 .showcase-2-flex .row-1 {
+  flex: 1;
+}
+#showcase-2 .showcase-2-flex .row-1 img {
+  width: 20%;
+  margin-bottom: 1rem;
+}
+#showcase-2 .showcase-2-flex .row-2 {
+  flex: 1;
+}
+#showcase-2 .showcase-2-flex .row-2 .fa-quote-left, #showcase-2 .showcase-2-flex .row-2 .fa-quote-right {
+  color: red;
+}
+#showcase-2 .showcase-2-flex .row-2 .fa-quote-right {
+  margin-left: 200px;
+}
+#showcase-2 .showcase-2-flex .row-2 img {
+  border-radius: 50%;
+  width: 40%;
+  margin-left: 70px;
+}
+#showcase-2 .showcase-2-flex .row-3 {
+  flex: 1;
+}
+
 #contact .flexbox {
   flex: 1;
 }
