--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -149,6 +149,39 @@ form {
     }
 }
 
+//showcase-2
+#showcase-2 {
+    padding-top: 3rem;
+    width: 90%;
+    margin: 0 auto;
+    .showcase-2-flex {
+        .row-1 {
+            flex: 1;
+           img {
+            width: 20%;
+            margin-bottom: 1rem;
+           }
+        
+        }
+        .row-2 {
+            flex: 1;
+            .fa-quote-left, .fa-quote-right {
+                color: red;
+            }
+            .fa-quote-right {
+                margin-left: 200px;
+            }
+            img {
+                border-radius: 50%;
+                width: 40%;
+                margin-left: 70px ;
+            }
+        }
+    .row-3 {
+        flex: 1;
+    }    }
+}
+
 
 
 //contact
