--- a/scss/mobile.css
+++ b/scss/mobile.css
@@ -1,9 +1,9 @@
 #mainheader .subnavig {
-  margin: 2rem 0;
+  margin: 0 auto;
 }
 #mainheader .subnavig .subnav {
+  margin: 2rem 0;
   display: block;
-  margin: 0 auto;
   text-align: center;
 }
 
@@ -17,9 +17,34 @@
   text-align: justify;
 }
 
+#article .article-flex {
+  display: block;
+}
+#article .article-flex img {
+  width: 100%;
+}
+#article .article-flex p {
+  text-align: justify;
+}
+
 #showcase-2 .showcase-2-flex {
   display: block;
 }
 #showcase-2 .showcase-2-flex .row-1, #showcase-2 .showcase-2-flex .row-2, #showcase-2 .showcase-2-flex .row-3 {
   margin-bottom: 2rem;
+}
+
+#quotes .quotes-row {
+  display: block;
+}
+#quotes .quotes-row .quotes-row4 {
+  margin-bottom: 2rem;
+}
+
+#gallery .gallery-row img {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+#gallery .gallery-row .gallery-row1 {
+  display: block;
 }/*# sourceMappingURL=mobile.css.map */
