--- a/scss/styles.css
+++ b/scss/styles.css
@@ -110,9 +110,11 @@ form button {
 }
 #mainheader .subnavig .subnav .form-inline ::-moz-placeholder {
   text-align: left;
+  font-family: "Montserrat", sans-serif;
 }
 #mainheader .subnavig .subnav .form-inline ::placeholder {
   text-align: left;
+  font-family: "Montserrat", sans-serif;
 }
 #mainheader .subnavig .subnav .form-inline .btn-outline-dark {
   width: 50px;
@@ -154,6 +156,18 @@ form button {
 #showcase .showcase-flex .btn {
   margin: 2rem 0;
   width: 200px;
+}
+
+#article .article-flex img {
+  float: left;
+  width: 50%;
+  height: 50%;
+}
+#article .article-flex .article-content h2 {
+  margin: 1rem 0;
+}
+#article .article-flex .article-content h4 {
+  margin-bottom: 1rem;
 }
 
 #showcase-2 {
